--- a/Unit_1/CSS/main.css
+++ b/Unit_1/CSS/main.css
@@ -1,12 +1,12 @@
 body {
-    background-color: aqua;
+    background-color: #ffffff;
 }
 
 h1, h2 {
 	text-align: center;
-    color: navy;
+    color: #000000;
 }
 p {
-	color: purple;
+	color: #ffff00;
 	text-align: center;
 }
