--- a/unit_3/css/main3.css
+++ b/unit_3/css/main3.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 
 body {
-	background-color: white;
+	background-color: lavender;
 	backface-visibility: 30%;
 	margin: 2em;
 	line-height: 1.5em;
